lib/tools/orbit/test_output/closure.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.16s

tests/closure.orb: tests/closure.orb:2:14: Parse error
let add = \x -> x + a;
             ^
app->exec() == 1
